[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["nltk==3.9.1"]

[tool.setuptools]
packages = ["cli"]

[tool.pyright]
include = ["cli"]
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "."
